# AIService

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  test_main.http
src/aiservice/main/: __init__.py  app.py  loggin.py
src/aiservice/main/entity/: expense.py
src/aiservice/main/message/: __init__.py  expense_producer.py
src/aiservice/main/service/: __init__.py  llm_service.py  message_service.py
src/aiservice/main/utils/: __init__.py  log_config.py  message_parser.py
src/aiservice/test/: message_service.py  parse_message.py
